# SymbolicMemory

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/cyclic_sequence/: README.md  check_hallucinations.py  data.py  sae_mechanistic_intervention.py  tmp_cyclic.py  train_cyclic.py  train_sae.py  train_sparse_autoencoder.py  visualize_cyclic.py
examples/fixed_point_lorenz/: README.md  check_statistics.py  data.py  generate_statistics.py  train_lorenz.py  utils.py  visualize_lorenz.py
models/: __init__.py  attention.py  autoencoder.py  autoencoder_networks.py  mlp.py  simple_transformer.py  sparse_autoencoder.py  tmp_embedding.py  transformer.py  utils.py
src/symbolic_memory/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_generation.py
training/: __init__.py  loss.py  sae_trainer.py  tmp_loss.py  trainer.py  utils.py
