[project]
name = "symbolic-memory"
version = "0.1.0"
description = "A JAX-based implementation of symbolic memory and transformer models"
authors = [
    {name = "Andre Souza", email = "andrenogueirasouza@gmail.com"},
]
dependencies = [
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.18.1",
    "equinox>=0.11.10",
    "optax>=0.2.4",
    "tqdm>=4.67.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
cuda = [
    "jax[cuda12-pip]>=0.4.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/symbolic_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
