[project]
name = "symbolicmemory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "equinox>=0.12.2",
    "h5py>=3.13.0",
    "ipython>=9.2.0",
    "jax>=0.4.38",
    "jaxlib>=0.4.38",
    "lightning>=2.5.1.post0",
    "matplotlib>=3.10.3",
    "optax>=0.2.4",
    "torch<2.7",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
cuda = [
    "jax-cuda12-pjrt==0.4.38",
    "jax-cuda12-plugin==0.4.38",
    "jax[cuda12-pip]==0.4.38",
    "jaxlib==0.4.38",
    "nvidia-cublas-cu12==12.4.5.8",
    "nvidia-cuda-cupti-cu12==12.4.127",
    "nvidia-cuda-nvcc-cu12==12.6.85",
    "nvidia-cuda-runtime-cu12==12.4.127",
    "nvidia-cudnn-cu12==9.1.0.70",
    "nvidia-cufft-cu12==11.2.1.3",
    "nvidia-curand-cu12==10.3.5.147",
    "nvidia-cusolver-cu12==11.6.1.9",
    "nvidia-cusparse-cu12==12.3.1.170",
    "nvidia-nccl-cu12==2.21.5",
    "nvidia-nvjitlink-cu12==12.4.127",
    "nvidia-nvtx-cu12==12.4.127",
]
